# qrngd

./: .clang-format  CMakeLists.txt  README.md  cfg_read.c  cfg_read.h  file.c  file.h  main.c  qrngd.cnf  qrngd.h
.github/workflows/: build_deb.yml  cmake-single-platform.yml
cmake/: Packing.cmake
config/: config.l  config.y
